Saving the startup file will always remap paths relative #86231

Closed
opened 2021-03-03 12:33:55 +01:00 by Reiner Prokein · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-26 05:59, hash: 72ceab8ab2
Worked: (newest version of Blender that worked as expected)

Short description of error
When you want to use a custom icon in the brushes panel then you need to load it, and then to save the startup file. So that you don't need to reassign it again and again.

This part doesn't work anymore. The icon path gets corrupted with saving the startup.blend file. The icon is lost.

Exact steps for others to reproduce the error

  • Open Blender
  • Switch to Texture Paint
  • Open the Sidebar
  • Switch to Tool tab
  • In the Brushes panel activate the Custom Icon
  • Load your custom icon in the revealed path edit box.
  • Save the startup.blend to make the changes permanent.
  • Move with the mouse back over the path edit box. Or alternatively close and open Blender.
  • The path to the icon is now corrupted. The custom icon is gone.

corrupted.jpg

2021-03-03 12-25-35.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-26 05:59, hash: `72ceab8ab2` Worked: (newest version of Blender that worked as expected) **Short description of error** When you want to use a custom icon in the brushes panel then you need to load it, and then to save the startup file. So that you don't need to reassign it again and again. This part doesn't work anymore. The icon path gets corrupted with saving the startup.blend file. The icon is lost. **Exact steps for others to reproduce the error** - Open Blender - Switch to Texture Paint - Open the Sidebar - Switch to Tool tab - In the Brushes panel activate the Custom Icon - Load your custom icon in the revealed path edit box. - Save the startup.blend to make the changes permanent. - Move with the mouse back over the path edit box. Or alternatively close and open Blender. - The path to the icon is now corrupted. The custom icon is gone. ![corrupted.jpg](https://archive.blender.org/developer/F9862388/corrupted.jpg) [2021-03-03 12-25-35.mp4](https://archive.blender.org/developer/F9862391/2021-03-03_12-25-35.mp4)
Author

Added subscriber: @tiles

Added subscriber: @tiles
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

If the field is empty, and you have this set in the User Preferences:
image.png
then it should have this set when browsing to your file:
image.png

So ending up with a relative path is actually expected here I guess?
Now why blender puts an absolute path to begin with is another story and should be looked at.

If the field is empty, and you have this set in the User Preferences: ![image.png](https://archive.blender.org/developer/F9862702/image.png) then it should have this set when browsing to your file: ![image.png](https://archive.blender.org/developer/F9862706/image.png) So ending up with a relative path is actually expected here I guess? Now why blender puts an absolute path to begin with is another story and should be looked at.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-03-03 16:34:45 +01:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Ah, OK, if you started blender without loading a file, then a chosen path will always be absolute (it cannot be relative without the blend file being saved).

Bear with me, story continues:

Now if you save your startup file, this is always saved with the paths remaped relative, this changed in 3ada1949f8

  if (BLO_write_file(bmain,
                     filepath,
                     fileflags,
                     &(const struct BlendFileWriteParams){
                         .remap_mode = BLO_WRITE_PATH_REMAP_RELATIVE,
                     },
                     op->reports) == 0) {

Now why did this change for saving the Startup File?
Honestly, I have no idea, the commit message will not tell us why.

Sooo, to me this actually looks like an unintentional change, but only @ideasman42 would know.
Will confirm for now, have a patch that changes this back.

Ah, OK, if you started blender without loading a file, then a chosen path will always be absolute (it cannot be relative without the blend file being saved). Bear with me, story continues: Now if you save your startup file, this is always saved with the paths remaped relative, this changed in 3ada1949f8 ``` if (BLO_write_file(bmain, filepath, fileflags, &(const struct BlendFileWriteParams){ .remap_mode = BLO_WRITE_PATH_REMAP_RELATIVE, }, op->reports) == 0) { ``` Now why did this change for saving the Startup File? Honestly, I have no idea, the commit message will not tell us why. Sooo, to me this actually looks like an unintentional change, but only @ideasman42 would know. Will confirm for now, have a patch that changes this back.
Philipp Oeser changed title from Texture painting in Brushes Panel. Loading a custom icon and save startup file corrupts the path to Saving the startup file will always remap paths relative 2021-03-03 16:35:23 +01:00
Author

Just a guess, but maybe because it is meant to store the custom icon in the startup.blend file too? But after reloading Blender the custom icon does not display.

Just a guess, but maybe because it is meant to store the custom icon in the startup.blend file too? But after reloading Blender the custom icon does not display.
Philipp Oeser removed their assignment 2021-03-04 10:33:34 +01:00
Member

Since this was proposed by @ideasman42 :
P2012 or move logic to a higher level: P2013, will step down

Since this was proposed by @ideasman42 : [P2012](https://archive.blender.org/developer/P2012.txt) or move logic to a higher level: [P2013](https://archive.blender.org/developer/P2013.txt), will step down

This issue was referenced by 9fffb78343

This issue was referenced by 9fffb78343ba00c33c6b5165d6c8c5c77b97a99c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-03-04 10:53:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86231
No description provided.