Fix T86231: Saving startup file always remaps relative